--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="container-fluid px-4 px-lg-0">
                     <h1 class="fst-italic lh-1 mb-4">MB Info</h1>
                     <p class="mb-5">
-                        is a craft provider of IT consulting and software development services. Founded in 2021
+                        offers IT consulting, software development, and technical support services, with expertise in business applications, system setup, and infrastructure. Established in 2021
                     </p>
                     <p class="mb-5">
                         Contact person:<BR>
